commit 6