@@ -8,10 +8,8 @@ import com.yunusAhmet.rentACar.entity.*;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import java.time.Clock;
+
 import java.time.LocalDateTime;
-import java.util.Arrays;
-import java.util.Date;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -19,15 +17,14 @@ import static org.mockito.Mockito.*;
 
 public class RentalManagerTest {
 
-    public RentalManager rentalManager;
-    public RentalDao rentalDao;
+    private RentalManager rentalManager;
+    private RentalDao rentalDao;
 
-    public CustomerManager customerManager;
+    private CustomerManager customerManager;
 
-    public CarManager carManager;
+    private CarManager carManager;
 
-
-    public RentCarDtoConverter carDtoConverter;
+    private RentCarDtoConverter carDtoConverter;
 
 
     @BeforeEach
@@ -45,22 +42,24 @@ public class RentalManagerTest {
     @Test
     public void testRentACar_whenDateIsCorrectAndCustomerDoesntRentCarAndCarHavenTRented_shouldReturnRentCarDto(){
         RentACarRequest request = new RentACarRequest(LocalDateTime.of(2023,12,12,12,24,10),1,2);
+
         Customer customer = new Customer(1,"Ahmet","Dayi","a@gmail.com","Ahmet.26","Ahmet.26");
         Brand brand = new Brand(1,"a8");
         List<Color> colors = List.of(new Color(1,"black"),
                 new Color(2,"blue"));
         Car car = new Car(2,"bmw",1234L,"2001",brand,colors);
         BrandDto brandDto = new BrandDto(brand.getBrandId(),brand.getBrandName());
-        List<ColorDto> colorDtos = Arrays.asList(new ColorDto(1,"black"),new ColorDto(2,"blue"));
+        List<ColorDto> colorDtos = List.of(new ColorDto(1,"black"),new ColorDto(2,"blue"));
         CarDto carDto = new CarDto
                 (
-                        1,
+                        2,
                         car.getCarName(),
                         car.getDailyPrice(),
                         car.getProductYear(),
                         brandDto,
                         colorDtos
                 );
+
         CustomerDto customerDto = new CustomerDto
                 (
                         1,
@@ -69,34 +68,32 @@ public class RentalManagerTest {
                         customer.getEmail()
                 );
         Rental rental = new Rental(LocalDateTime.now(),LocalDateTime.of(2023,12,12,12,24,10),customer,car);
-        Rental saveRental = new Rental(1,LocalDateTime.now(),LocalDateTime.of(2023,12,12,12,24,10),customer,car);
+        Rental saveRental = new Rental(1,rental.getRentDate(),rental.getReturnDate(),customer,car);
 
         List<Rental> rentals = List.of(
                 new Rental(
                         3,
                         LocalDateTime.now(),
-                        LocalDateTime.of(2023,12,12,12,24,10),
+                        LocalDateTime.of(2023,12,12,12,24,30),
                         new Customer(2,"ali","genc","AliGenc.26","AliGenc.26"),
                         new Car(3,"audi",brand))
         );
 
-        RentCarDto expected = new RentCarDto(1,LocalDateTime.now(),LocalDateTime.of(2023,12,12,12,24,10),customerDto,carDto);
+        RentCarDto expected = new RentCarDto(saveRental.getRentalId(),rental.getRentDate(),rental.getReturnDate(),customerDto,carDto);
 
-
-        when(customerManager.getCustomerByCustomerId(customer.getCustomerId())).thenReturn(customer);
         when(carManager.findCarByCarId(car.getCarId())).thenReturn(car);
+        when(customerManager.getCustomerByCustomerId(customer.getCustomerId())).thenReturn(customer);
         when(rentalDao.findAll()).thenReturn(rentals);
-        when(rentalDao.save(rental)).thenReturn(saveRental);
+        when(rentalDao.save(any(Rental.class))).thenReturn(saveRental);
         when(carDtoConverter.convert(saveRental)).thenReturn(expected);
 
         RentCarDto result = rentalManager.rentACar(request);
 
         assertEquals(expected,result);
-
-        verify(customerManager).getCustomerByCustomerId(customer.getCustomerId());
         verify(carManager).findCarByCarId(car.getCarId());
+        verify(customerManager).getCustomerByCustomerId(customer.getCustomerId());
         verify(rentalDao).findAll();
-        verify(rentalDao).save(rental);
+        verify(rentalDao).save(any(Rental.class));
         verify(carDtoConverter).convert(saveRental);
 
     }
